gitops/components/mesh/base/waypoint-banking-service.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: banking-service-waypoint
  namespace: banking-apps
  labels:
    app.kubernetes.io/part-of: banking-demo
    istio.io/waypoint-for: service
spec:
  gatewayClassName: istio-waypoint
  listeners:
    - name: mesh
      port: 15008
      protocol: HBONE
